--- a/app/src/main/res/layout/activity_forget_pwd.xml
+++ b/app/src/main/res/layout/activity_forget_pwd.xml
@@ -27,7 +27,7 @@
                 android:background="@color/colorWhite"
                 android:hint="请输入手机号"
                 android:textColor="#c8c8c8"
-                android:textSize="28px" />
+                android:textSize="15sp" />
 
             <View
                 android:id="@+id/view_line"
@@ -43,7 +43,7 @@
                 android:id="@+id/liner"
                 android:layout_below="@+id/view_line"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
                 android:gravity="clip_vertical"
                 android:orientation="horizontal">
 
@@ -51,11 +51,11 @@
                     android:id="@+id/et_phone"
                     android:layout_weight="1"
                     android:layout_width="0dp"
-                    android:layout_height="45dp"
+                    android:layout_height="match_parent"
                     android:background="@color/colorWhite"
                     android:hint="请输入短信验证码"
                     android:textColor="#c8c8c8"
-                    android:textSize="28px" />
+                    android:textSize="15sp" />
 
                 <TextView
                     android:id="@+id/tv_phone_code"
@@ -71,7 +71,7 @@
                     android:gravity="center_horizontal"
                     android:text="获取验证码"
                     android:textColor="#2D3D6D"
-                    android:textSize="30px" />
+                    android:textSize="13sp" />
             </LinearLayout>
 
             <View
@@ -91,7 +91,7 @@
                 android:background="@color/colorWhite"
                 android:hint="请输入密码"
                 android:textColor="#c8c8c8"
-                android:textSize="28px" />
+                android:textSize="15sp" />
 
             <View
                 android:id="@+id/view_line3"
@@ -110,7 +110,7 @@
                 android:background="@color/colorWhite"
                 android:hint="请再次输入密码"
                 android:textColor="#c8c8c8"
-                android:textSize="28px" />
+                android:textSize="15sp" />
 
         </com.zhy.autolayout.AutoRelativeLayout>
 
