--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,12 @@
         android:layout_height="match_parent"
         android:background="#f6f6f6"
         android:orientation="vertical">
-
+    <com.zhy.autolayout.AutoLinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="#f6f6f6"
+        android:orientation="vertical">
        <TextView
            android:textStyle="bold"
            android:layout_marginTop="120px"
@@ -38,7 +43,7 @@
                 android:id="@+id/input_phone"
                 style="@style/login_field.value"
                 android:paddingRight="8dp"
-                android:hint="请输入手机号"
+                android:hint="请输入登录账号"
                 android:textColor="#323232"
                 android:textSize="14sp" />
             <TextView
@@ -59,7 +64,7 @@
                 android:layout_marginRight="18dp"
 
                 android:contentDescription="@string/app_name"
-                android:src="@drawable/login_more_up" />
+                android:src="@drawable/bottom_jiantou" />
         </LinearLayout>
 
         <View
@@ -109,7 +114,7 @@
                 android:background="#dddddd" />
         </LinearLayout>
         <LinearLayout
-            android:layout_marginTop="60px"
+            android:layout_marginTop="25px"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -161,9 +166,9 @@
             android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-
+    </com.zhy.autolayout.AutoLinearLayout>
         <TextView
-            android:layout_marginTop="100px"
+            android:layout_marginBottom="15dp"
             android:layout_gravity="bottom"
             android:id="@+id/banben"
             android:drawablePadding="8px"
