--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -38,58 +38,16 @@
                 android:background="@color/colorLine" />
 
 
-            <LinearLayout
-                android:id="@+id/liner"
-                android:layout_below="@+id/view_line"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="clip_vertical"
-                android:orientation="horizontal">
 
                 <com.wb.weibao.view.ClearEditText
+                    android:layout_below="@id/view_line"
                     android:id="@+id/et_phone"
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="45dp"
                     android:background="@color/colorWhite"
                     android:hint="请输入手机号"
                     android:textColor="#c8c8c8"
                     android:textSize="28px" />
-
-                <TextView
-                    android:id="@+id/tv_add_order"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="20px"
-                    android:background="@drawable/shape_btn_blue"
-                    android:paddingBottom="8px"
-                    android:paddingLeft="15px"
-                    android:paddingRight="15px"
-                    android:paddingTop="8px"
-                    android:text="获取验证码"
-                    android:textColor="#2D3D6D"
-                    android:textSize="30px" />
-            </LinearLayout>
-
-            <View
-                android:id="@+id/view_line2"
-                android:layout_width="match_parent"
-                android:layout_height="1px"
-                android:layout_below="@+id/liner"
-                android:layout_marginBottom="15px"
-                android:layout_marginTop="15px"
-                android:background="@color/colorLine" />
-
-            <com.wb.weibao.view.ClearEditText
-                android:id="@+id/et_pwd"
-                android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:layout_below="@+id/view_line2"
-                android:background="@color/colorWhite"
-                android:hint="请输入短信验证码"
-                android:textColor="#c8c8c8"
-                android:textSize="28px" />
 
 
 
