--- a/app/src/main/res/layout/fragment_home_layout.xml
+++ b/app/src/main/res/layout/fragment_home_layout.xml
@@ -133,7 +133,7 @@
                     android:layout_weight="1"
                     android:background="@drawable/shape_white"
                     android:drawablePadding="30px"
-                    android:drawableTop="@mipmap/home_add_weibao_icon"
+                    android:drawableTop="@drawable/home_01"
                     android:gravity="center"
                     android:paddingBottom="22px"
                     android:paddingTop="44px"
@@ -150,7 +150,7 @@
                     android:layout_weight="1"
                     android:background="@drawable/shape_white"
                     android:drawablePadding="30px"
-                    android:drawableTop="@mipmap/home_my_weibao_icon"
+                    android:drawableTop="@drawable/home_02"
                     android:gravity="center"
                     android:paddingBottom="22px"
                     android:paddingTop="44px"
@@ -166,7 +166,7 @@
                     android:layout_weight="1"
                     android:background="@drawable/shape_white"
                     android:drawablePadding="30px"
-                    android:drawableTop="@mipmap/home_warning_record_icon"
+                    android:drawableTop="@drawable/home_03"
                     android:gravity="center"
                     android:paddingBottom="22px"
                     android:paddingTop="44px"
@@ -181,7 +181,7 @@
                     android:layout_weight="1"
                     android:background="@drawable/shape_white"
                     android:drawablePadding="30px"
-                    android:drawableTop="@mipmap/home_look_gang_icon"
+                    android:drawableTop="@drawable/home_04"
                     android:gravity="center"
                     android:paddingBottom="22px"
                     android:paddingTop="44px"
@@ -242,7 +242,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
-                        android:background="@mipmap/home_weibao_order_icon" />
+                        android:background="@drawable/home_05" />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -280,11 +280,11 @@
                     android:layout_weight="1"
                     android:background="@drawable/shape_white"
                     android:drawablePadding="30px"
-                    android:drawableTop="@mipmap/home_fire_control_icon"
+                    android:drawableTop="@drawable/home_06"
                     android:gravity="center"
                     android:paddingBottom="22px"
                     android:paddingTop="44px"
-                    android:text="消防微岗"
+                    android:text="消防微站"
                     android:textColor="@color/color333333"
                     android:textSize="26px" />
 
@@ -296,7 +296,7 @@
                     android:layout_weight="1"
                     android:background="@drawable/shape_white"
                     android:drawablePadding="30px"
-                    android:drawableTop="@mipmap/home_peixun_icon"
+                    android:drawableTop="@drawable/home_07"
                     android:gravity="center"
                     android:paddingBottom="22px"
                     android:paddingTop="44px"
@@ -310,7 +310,7 @@
                     android:layout_weight="1"
                     android:background="@drawable/shape_white"
                     android:drawablePadding="30px"
-                    android:drawableTop="@mipmap/home_shuiya_icon"
+                    android:drawableTop="@drawable/home_08"
                     android:gravity="center"
                     android:paddingBottom="22px"
                     android:paddingTop="44px"
@@ -336,7 +336,7 @@
                     android:layout_weight="1"
                     android:background="@drawable/shape_white"
                     android:drawablePadding="30px"
-                    android:drawableTop="@mipmap/home_shuiwei_icon"
+                    android:drawableTop="@drawable/home_09"
                     android:gravity="center"
                     android:paddingBottom="22px"
                     android:paddingTop="44px"
@@ -352,7 +352,7 @@
                     android:layout_weight="1"
                     android:background="@drawable/shape_white"
                     android:drawablePadding="30px"
-                    android:drawableTop="@mipmap/home_dianqi_icon"
+                    android:drawableTop="@drawable/home_10"
                     android:gravity="center"
                     android:paddingBottom="22px"
                     android:paddingTop="44px"
