--- a/app/src/main/res/layout/activity_qrcode.xml
+++ b/app/src/main/res/layout/activity_qrcode.xml
@@ -8,11 +8,20 @@
         android:background="#ffffff"
         android:gravity="center"
         android:orientation="vertical">
+        <TextView
+            android:id="@+id/code"
+            android:text=""
+            android:textSize="20sp"
+            android:textColor="@color/color000000"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
         <ImageView
+            android:layout_marginTop="10dp"
             android:id="@+id/image_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
+            android:visibility="gone"
             android:layout_marginTop="20dp"
             android:textColor="@color/color000000"
             android:drawablePadding="10dp"
@@ -23,6 +32,7 @@
             android:layout_height="wrap_content" />
 
         <TextView
+            android:visibility="gone"
             android:id="@+id/tv_phone_code"
             android:layout_width="140dp"
             android:layout_height="40dp"
