--- a/app/src/main/res/layout/activity_handle_maintenance.xml
+++ b/app/src/main/res/layout/activity_handle_maintenance.xml
@@ -28,17 +28,44 @@
                     android:id="@+id/tv_state"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="维保状态：维保成功"
+                    android:text="维保状态   ：维保成功"
                     android:textColor="@color/color333333"
-                    android:textSize="28px" />
+                    android:textSize="16sp" />
                 <TextView
-                    android:id="@+id/tv_name"
-                    android:layout_width="wrap_content"
+                    android:visibility="gone"
+
+                    android:layout_width="160px"
                     android:layout_height="wrap_content"
                     android:text="实际维保人:"
                     android:layout_marginTop="24px"
                     android:textColor="@color/color333333"
-                    android:textSize="28px" />
+                    android:textSize="16sp" />
+                <LinearLayout
+                    android:layout_marginTop="24px"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/tv_name"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/view_line"
+                        android:text="实际维保人 :"
+                        android:textColor="@color/color333333"
+                        android:textSize="16sp" />
+
+                    <EditText
+                        android:id="@+id/et_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignBaseline="@+id/tv_hint4"
+                        android:layout_toRightOf="@+id/tv_hint4"
+                        android:background="@color/colorWhite"
+                        android:hint="请输入实际维保人"
+                        android:textColor="@color/color333333"
+                        android:textSize="16sp" />
+
+                </LinearLayout>
 
             </com.zhy.autolayout.AutoLinearLayout>
 
