--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -40,6 +40,7 @@
 
 
                 <com.wb.weibao.view.ClearEditText
+                    android:inputType="phone"
                     android:layout_below="@id/view_line"
                     android:id="@+id/et_phone"
                     android:layout_width="match_parent"
