--- a/app/src/main/res/layout/activity_security_info.xml
+++ b/app/src/main/res/layout/activity_security_info.xml
@@ -99,6 +99,7 @@
             android:layout_weight="1"
             />
         <TextView
+            android:visibility="gone"
             android:id="@+id/tv_info1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
