--- a/app/src/main/res/layout/activity_sign.xml
+++ b/app/src/main/res/layout/activity_sign.xml
@@ -61,7 +61,12 @@
                         android:textSize="30px" />
 
                 </com.zhy.autolayout.AutoLinearLayout>
-
+<TextView
+    android:visibility="gone"
+    android:gravity="center"
+    android:id="@+id/gps"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content" />
                 <com.zhy.autolayout.AutoRelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
