--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -8,16 +8,61 @@
         android:layout_height="match_parent"
         android:background="@android:color/black"
         android:orientation="vertical">
+        <RelativeLayout
+            android:id="@+id/lly_head"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@color/colorDefault"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:id="@+id/lly_left"
+                android:layout_width="40dp"
+                android:layout_height="match_parent"
+                android:gravity="center">
+
+                <ImageView
+                    android:id="@+id/id_leftBtnImg"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/image_back_icon" />
+            </LinearLayout>
+
+
+            <TextView
+                android:id="@+id/tv_left_txt"
+                android:layout_width="36dp"
+                android:layout_height="match_parent"
+                android:layout_toRightOf="@+id/lly_left"
+                android:gravity="center"
+                android:visibility="gone"
+                android:textColor="@color/colorWhite"
+                android:textSize="14dp" />
+
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:drawablePadding="6dp"
+                android:drawableRight="@drawable/ic_view_jiantou"
+                android:textColor="@color/colorWhite"
+                android:textSize="18dp" />
+        </RelativeLayout>
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:background="@android:color/black"
+    android:layout_weight="1">
 
         <FrameLayout
             android:id="@+id/frame_layout"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="match_parent"
             android:layout_alignParentTop="true"
             android:layout_marginBottom="10dp"
             android:background="@android:color/black">
-
             <TextureView
                 android:id="@+id/texture_view"
                 android:layout_width="match_parent"
@@ -45,6 +90,19 @@
                 android:layout_height="wrap_content" />
 
         </FrameLayout>
+    <TextView
+        android:gravity="center"
+        android:visibility="gone"
+        android:id="@+id/time"
+        android:layout_marginTop="10dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:background="@color/white"
+        android:text=""
+        android:textColor="@color/color333333"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content" />
+</RelativeLayout>
         <LinearLayout
             android:gravity="center"
             android:orientation="horizontal"
