--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -104,6 +104,7 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content" />
     <TextView
+        android:visibility="gone"
         android:layout_marginLeft="20dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
@@ -121,6 +122,7 @@
         android:layout_height="wrap_content" />
 
     <TextView
+        android:visibility="gone"
         android:layout_marginLeft="20dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
