--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <com.zhy.autolayout.AutoFrameLayout
+    <com.zhy.autolayout.AutoLinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/weclcome_icon">
-
-    </com.zhy.autolayout.AutoFrameLayout>
+        android:orientation="vertical"
+        android:gravity="center"
+        android:background="@mipmap/start_logo">
+<ImageView
+    android:background="@mipmap/start_logo1"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" />
+    </com.zhy.autolayout.AutoLinearLayout>
 </layout>
