--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,7 +27,7 @@
     <color name="color6B7BA8">#6B7BA8</color>
     <color name="light_yellow">#FD542D</color>
     <color name="blue_00b4f0">#00b4f0</color>
-
+    <color name="colorf6f6f6">#F6F6F6</color>
     <!-- Android standard ICS color -->
     <!-- Android standard ICS color -->
     <!-- Android standard ICS color -->
