--- a/app/src/main/res/layout/activity_record_detaul.xml
+++ b/app/src/main/res/layout/activity_record_detaul.xml
@@ -481,6 +481,33 @@
                         android:textSize="28px" />
                     <!--状态-->
 
+                    <com.zhy.autolayout.AutoLinearLayout
+                        android:layout_marginTop="10dp"
+                        android:layout_below="@+id/tv_hint_14"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/colorWhite"
+                        android:orientation="horizontal"
+                        android:paddingLeft="30px">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@color/colorWhite"
+                            android:text="图片:"
+                            android:textColor="@color/color333333"
+                            android:textSize="28px" />
+
+                        <GridView
+                            android:id="@+id/gv_body"
+                            android:layout_width="0dp"
+                            android:numColumns="5"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1">
+                        </GridView>
+
+                    </com.zhy.autolayout.AutoLinearLayout>
+
                 </com.zhy.autolayout.AutoRelativeLayout>
 
             </com.zhy.autolayout.AutoLinearLayout>
