--- a/app/src/main/res/layout/fragment_ycl.xml
+++ b/app/src/main/res/layout/fragment_ycl.xml
@@ -10,7 +10,7 @@
             android:id="@+id/srl_body"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="@color/colorWhite"
+            android:background="@color/colorf6f6f6"
             android:layout_weight="1">
 
             <android.support.v7.widget.RecyclerView
