--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -101,7 +101,7 @@
         <item name="android:paddingLeft">8dp</item>
         <item name="android:paddingRight">8dp</item>
         <item name="android:textColor">@color/events_list_activity_toolbar_tab__title_text_color_selector</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">13dp</item>
     </style>
     <!--webView-->
     <declare-styleable name="WebViewWithProgress">
